:heavy_check_mark: Сборка #5

--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -54,21 +54,36 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+.wrapper {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
 
+  background-color: #ffffff;
+}
+
+.wrapper-pink {
   background-color: #feafc3;
 }
 
+.wrapper-blue {
+  background-color: #69a9ff;
+}
+
+.wrapper-yellow {
+  background-color: #fcc850;
+}
+
+.container {
+  width: 1170px;
+  margin: 0 auto;
+}
+
 img {
-  display: block;
   max-width: 100%;
+  height: auto;
 
   object-fit: cover;
-  object-position: center;
 }
 
 .list-reset {
@@ -102,9 +117,13 @@ img {
   font-weight: 900;
   font-size: 32px;
   line-height: 46px;
+  text-align: center;
 }
 
 .button {
+  display: inline-block;
+  padding: 12px 32px;
+
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -115,7 +134,54 @@ img {
   text-decoration: none;
 
   background-color: #fcfcfc;
+  border: none;
+  border-radius: 26px;
+  box-shadow: 0 4px 12px rgba(45, 52, 64, 0.1),
+    0 0 0 4px rgba(252, 252, 252, 0.4);
   cursor: pointer;
+}
+
+.button-other {
+  color: #fcfcfc;
+
+  background-color: #ff2f64;
+  box-shadow: 0 4px 12px rgba(45, 52, 64, 0.1),
+    0 0 0 4px rgba(255, 47, 100, 0.3);
+}
+
+.button-outline {
+  padding: 8px 10px;
+
+  font-size: 14px;
+
+  background-color: rgba(252, 252, 252, 0.3);
+  border-radius: 20px;
+  box-shadow: 0 0 0 2px #fcfcfc;
+}
+
+.field {
+  width: 100%;
+  height: 48px;
+  padding: 13px 15px;
+
+  font-size: 16px;
+  line-height: 20px;
+  font-family: "Inter", sans-serif;
+  color: #2d3440;
+
+  background-color: #ffffff;
+  border: 1px solid #b9b9b9;
+  border-radius: 4px;
+}
+
+textarea.field {
+  resize: none;
+}
+
+.field::placeholder {
+  color: #b9b9b9;
+
+  opacity: 1;
 }
 
 /* Шапка */
@@ -124,8 +190,7 @@ img {
 
 .nav {
   display: flex;
-  width: 1170px;
-  margin: 0 auto;
+  flex-wrap: wrap;
   padding: 24px 0;
 }
 
@@ -133,35 +198,43 @@ img {
 
 .logo {
   display: block;
+  width: 137px;
+  height: 56px;
   margin-right: 16px;
+}
+
+.logo img {
+  display: block;
+  width: 100%;
 }
 
 .nav-menu {
   display: flex;
-  justify-content: flex-start;
+  flex-wrap: wrap;
   align-items: center;
-  width: 575px;
+  max-width: 575px;
   margin-right: auto;
 }
 
 .nav-item {
-  padding: 8px 16px;
+  padding: 8px 0;
 }
 
 .nav-link {
   display: block;
+  padding: 6px 13px;
 
   color: inherit;
   text-decoration: none;
+
+  border: 2px solid transparent;
+  border-radius: 30px;
 }
 
 /* Навигация пользователя */
 
 .nav-phone {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-right: 16px;
+  margin: 18px 16px 0 0;
 
   font-weight: 700;
   color: inherit;
@@ -170,13 +243,14 @@ img {
 
 .nav-user {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   max-width: 431px;
-  margin: 0;
 }
 
 .user-item {
   margin-right: 16px;
+  padding: 8px 0;
 }
 
 .user-item:last-child {
@@ -184,83 +258,157 @@ img {
 }
 
 .user-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px 14px;
+
+  font-size: 14px;
   color: inherit;
   text-decoration: none;
+
+  background-color: rgba(252, 252, 252, 0.3);
+  border: 2px solid transparent;
+  border-radius: 30px;
 }
 
-.text-login {
-  font-size: 14px;
-}
-
-.basket-counter {
-  font-size: 14px;
+.user-link-search {
+  width: 32px;
+  height: 32px;
+  padding: 0;
 }
 
 /* Главный раздел */
 
 .main {
   flex-grow: 1;
-  width: 1170px;
-  margin: 0 auto;
+}
+
+.main-index {
+  display: grid;
+  align-items: start;
+
+  grid-template-columns: 1fr;
+  row-gap: 80px;
 }
 
 /* Слайдер */
 
 .slider {
-  margin-bottom: 80px;
+  padding-top: 21px;
+}
+
+.slider-wrapper {
+  position: relative;
+
+  display: grid;
+  align-items: center;
+
+  gap: 0 40px;
+  grid-template-columns: 1fr auto auto;
 }
 
 .slide {
-  display: flex;
+  display: grid;
+  align-items: center;
+  width: 100px;
+  overflow: hidden;
+
+  gap: 0 10px;
+  grid-template-columns: 100px;
+  justify-items: end;
 }
 
-.slide-active .slide-text {
-  width: 429px;
+.slide-active {
+  width: auto;
+  overflow: auto;
+
+  grid-template-columns: 1fr 367px;
 }
 
 .slide-text {
-  width: 470px;
+  display: none;
+}
+
+.slide-active .slide-text {
+  display: block;
+}
+
+.slide-image {
+  width: 100px;
+  height: 150px;
+
+  opacity: 0.4;
+}
+
+.slide-image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.slide-active .slide-image {
+  width: 367px;
+  height: 507px;
+  padding: 0 20px;
+
+  opacity: 1;
 }
 
 .slide-caption {
+  margin: 0 0 24px;
+
   font-weight: 900;
   font-size: 36px;
   line-height: 46px;
 }
 
 .slide-description {
+  margin: 0 0 48px;
+
   font-size: 18px;
   line-height: 24px;
 }
 
 .slider-bullets {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.slider-social {
+  margin: 0 4px 0 auto;
+}
+
+.social-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+  gap: 16px;
 }
 
 /* Заказывайте мороженое и получайте подарки! */
 
-.presents {
-  margin-bottom: 81px;
-}
-
 .presents-title {
   margin-bottom: 55px;
-
-  text-align: center;
 }
 
 .presents-list {
-  display: flex;
+  display: grid;
+
+  gap: 0 30px;
+  grid-template-columns: 570px 570px;
 }
 
 .presents-item {
-  width: 570px;
-  padding: 36px;
+  padding: 36px 220px 36px 36px;
 
   background-color: #ff7799;
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: contain;
+  border-radius: 16px;
 }
 
 .presents-item-raspberry {
@@ -272,8 +420,7 @@ img {
 }
 
 .presents-subtitle {
-  margin: 0;
-  margin-bottom: 28px;
+  margin: 0 0 28px;
 
   font-weight: 700;
   font-size: 24px;
@@ -281,59 +428,79 @@ img {
 }
 
 .presents-description {
-  width: 317px;
-  margin: 0;
-  margin-bottom: 28px;
+  margin: 0 0 28px;
 
   line-height: 22px;
 }
 
-.presents-item-raspberry {
-  margin-right: 30px;
-}
-
 /* Попробуйте самые популярные вкусы нашего мороженого */
 
-.catalog {
-  margin-bottom: 80px;
+.catalog-page {
+  padding-bottom: 40px;
 }
 
 .catalog-title-common {
   margin-bottom: 56px;
+}
+
+.catalog-list {
+  display: grid;
+
+  gap: 0 30px;
+  grid-template-columns: 270px 270px 270px 270px;
+}
+
+.catalog-page .catalog-list {
+  margin-bottom: 16px;
+}
+
+.catalog-item {
+  padding-top: 51px;
 
   text-align: center;
 }
 
-.catalog-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.catalog-item {
-  width: 270px;
-  margin-right: 30px;
-}
-
-.catalog-item:nth-child(4n) {
-  margin-right: 0;
-}
-
 .catalog-wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 25px 40px;
+
   background-color: #fcfcfc;
+  border-radius: 8px;
 }
 
 .catalog-link {
+  display: block;
+  width: 168px;
+  height: 168px;
+  margin: -77px auto 17px;
+
   color: inherit;
   text-decoration: none;
+
+  border-radius: 50%;
+}
+
+.catalog-img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  border-radius: 50%;
 }
 
 .catalog-title {
+  margin: 0;
+
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
 }
 
 .catalog-text {
+  margin: 0;
+
   line-height: 22px;
   color: #565c66;
 }
@@ -346,10 +513,6 @@ img {
 
 /* О компании */
 
-.about {
-  margin-bottom: 80px;
-}
-
 .about-container {
   padding: 24px;
 
@@ -357,12 +520,14 @@ img {
   background-image: url("../images/backgrounds/about-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 16px;
 }
 
 .about-wrapper {
   padding: 56px 40px;
 
   background-color: #ffffff;
+  border-radius: 16px;
 }
 
 .about-title {
@@ -372,60 +537,62 @@ img {
 }
 
 .about-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+
+  gap: 40px 32px;
+  grid-template-columns: 1fr 1fr;
 }
 
 .about-item {
-  width: 442px;
+  min-height: 48px;
+  padding-left: 64px;
 
   line-height: 22px;
   color: #565c66;
+
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-size: 48px 48px;
 }
 
 .about-item-production {
   background-image: url("../images/icons/about-item/production.svg");
-  background-repeat: no-repeat;
 }
 
 .about-item-ingredients {
   background-image: url("../images/icons/about-item/ingredients.svg");
-  background-repeat: no-repeat;
 }
 
 .about-item-quality {
   background-image: url("../images/icons/about-item/quality.svg");
-  background-repeat: no-repeat;
 }
 
 .about-item-delivery {
   background-image: url("../images/icons/about-item/delivery.svg");
-  background-repeat: no-repeat;
 }
 
 /* Ссылка на блог */
 
-.promo {
-  margin-bottom: 80px;
-}
-
 .promo-container {
-  display: flex;
+  display: grid;
+
+  gap: 0 30px;
+  grid-template-columns: 570px 570px;
 }
 
 .blog {
-  width: 570px;
-  margin-right: 30px;
+  padding: 32px 235px 67px 32px;
 
   background-color: #ff7799;
   background-image: url("../images/backgrounds/promo/blog-background.jpg");
   background-repeat: no-repeat;
   background-position: center right;
   background-size: cover;
+  border-radius: 16px;
 }
 
 .blog-title {
-  margin: 0;
+  margin: 0 0 12px;
 
   font-weight: 400;
   font-size: 16px;
@@ -435,7 +602,6 @@ img {
 
 .blog-link {
   display: block;
-  width: 303px;
 
   font-weight: 700;
   font-size: 24px;
@@ -447,56 +613,39 @@ img {
 /* Подписка на рассылку */
 
 .newsletter {
-  width: 570px;
   padding: 6px;
 
   background-color: #ff7799;
   background-image: url("../images/backgrounds/promo/newsletter-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 16px;
 }
 
 .newsletter-wrapper {
   padding: 26px;
 
   background-color: #ffffff;
+  border-radius: 16px;
 }
 
 .newsletter-description {
-  margin-bottom: 42px;
-}
-
-.newsletter-input {
-  padding: 14px 16px;
-
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  font-family: "Inter", sans-serif;
-  color: #b9b9b9;
-}
-
-.button-other {
-  color: #fcfcfc;
-
-  background-color: #ff2f64;
+  margin: 0 0 42px;
 }
 
 /* Доставка */
 
-.delivery {
-  margin-bottom: 80px;
-}
-
 .delivery-container {
-  display: flex;
-  padding: 64px 64px 64px 100px;
+  display: grid;
+  padding: 64px;
 
   background-color: #ff7799;
   background-image: url("../images/backgrounds/delivery-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+
+  gap: 0 150px;
+  grid-template-columns: 1fr 500px;
 }
 
 .delivery-content {
@@ -504,7 +653,6 @@ img {
   flex-direction: column;
   justify-content: center;
   width: 371px;
-  margin-right: 135px;
 }
 
 .delivery-title {
@@ -524,6 +672,8 @@ img {
   width: 500px;
 
   background-color: #fcfcfc;
+  border-radius: 8px;
+  box-shadow: 0 15px 40px rgba(45, 52, 64, 0.12);
 }
 
 .order-description {
@@ -535,24 +685,16 @@ img {
   font-weight: 700;
 }
 
-.order-form-input {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  font-family: "Inter", sans-serif;
-  color: #b9b9b9;
-}
-
 /* Контакты */
 
 .contacts-container {
   padding: 64px;
 
   background-color: #ff7799;
-  background-image: url("../images/backgrounds/contacts-background.jpg");
+  background-image: url("../images/backgrounds/contacts-background.png");
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 16px;
 }
 
 .contacts-content {
@@ -560,6 +702,8 @@ img {
   padding: 40px;
 
   background-color: #fcfcfc;
+  border-radius: 8px;
+  box-shadow: 0 8px 16px rgba(45, 52, 64, 0.12);
 }
 
 .contacts-subtitle {
@@ -597,25 +741,21 @@ img {
 /* Подвал */
 
 .page-footer {
-  width: 1170px;
-  margin: 0 auto;
   padding: 48px 0;
 }
 
 .page-footer-container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .footer-navigation-menu {
-  display: flex;
-  flex-wrap: wrap;
-  width: 356px;
+  display: grid;
+  max-width: 400px;
   margin: 0 auto;
-}
 
-.footer-navigation-link-favorites {
-  font-weight: 700;
-  font-size: 14px;
+  gap: 8px 24px;
+  grid-template-columns: 126px 182px;
 }
 
 .footer-navigation-link {
@@ -624,11 +764,28 @@ img {
   text-decoration: none;
 }
 
-.page-footer-copyright {
-  width: 193px;
+.footer-navigation-link-favorites {
+  font-weight: 700;
+}
+
+.page-footer-copyright-logo {
+  display: block;
+  width: 93px;
+  height: 27px;
+  margin-bottom: 14px;
+
+  color: #2d3440;
+}
+
+.page-footer-copyright-logo img {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .page-footer-copyright-info {
+  margin: 0;
+
   font-size: 12px;
   line-height: 16px;
 }
@@ -636,12 +793,15 @@ img {
 .page-footer-copyright-link {
   color: inherit;
   text-decoration: none;
+
+  border-bottom: 1px solid rgba(46, 52, 64, 0.5);
 }
 
 /* Хлебные крошки Каталога */
 
 .breadcrumbs-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .breadcrumbs-link {
@@ -649,6 +809,12 @@ img {
   font-size: 14px;
   color: inherit;
   text-decoration: none;
+
+  border-bottom: 1px solid transparent;
+}
+
+.breadcrumbs-link-current {
+  border-color: currentColor;
 }
 
 /* Фильтр товаров Каталога */
@@ -664,16 +830,29 @@ img {
 }
 
 .filter-select {
+  width: 196px;
+  height: 36px;
+  padding: 0 40px 0 14px;
+
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
   font-family: "Inter", sans-serif;
   color: #2d3440;
+
+  background-color: rgba(252, 252, 252, 0.3);
+  border: 2px solid transparent;
+  border-radius: 20px;
 }
 
 .filter-list {
   display: flex;
+  flex-wrap: wrap;
+  padding: 8px 24px;
+
+  background-color: rgb(252, 252, 252, 0.3);
+  border-radius: 18px;
 }
 
 .filter-label-text {
@@ -681,24 +860,28 @@ img {
 }
 
 .filter-form-button {
+  width: 185px;
+  padding: 7px;
+
+  font-weight: 700;
   font-size: 14px;
 }
 
 /* Карточки товаров Каталога */
 
-.catalog-page {
-  margin-bottom: 40px;
-}
-
-.catalog-list {
-  margin-bottom: 16px;
-}
-
 .pagination {
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
-  padding: 41px 98px;
+  padding: 41px 0;
+
+  grid-template-columns: 180px 1fr 180px;
+}
+
+.pagination::before {
+  content: "";
+
+  width: 100%;
 }
 
 .pagination-button-more {
@@ -706,14 +889,36 @@ img {
 }
 
 .pagination-container {
-  display: flex;
+  display: grid;
+  justify-content: end;
+
+  gap: 3px;
+  grid-template-columns: 16px minmax(120px, auto) 16px;
 }
 
 .pagination-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .pagination-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 24px;
+  min-height: 24px;
+  padding: 0 2px;
+
+  line-height: 20px;
   color: inherit;
   text-decoration: none;
+
+  border: 1px solid transparent;
+  border-radius: 50%;
+}
+
+.pagination-link-current {
+  background-color: #fcfcfc;
+
+  pointer-events: none;
 }
