--- a/styles/styles.css
+++ b/styles/styles.css
@@ -447,7 +447,7 @@ textarea.field {
   display: grid;
 
   gap: 0 30px;
-  grid-template-columns: 270px 270px 270px 270px;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .catalog-page .catalog-list {
