--- a/styles/styles.css
+++ b/styles/styles.css
@@ -577,7 +577,7 @@ textarea.field {
   display: grid;
 
   gap: 0 30px;
-  grid-template-columns: 570px 570px;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .blog {
