--- a/styles/styles.css
+++ b/styles/styles.css
@@ -637,6 +637,7 @@ textarea.field {
 
 .delivery-container {
   display: grid;
+  align-items: center;
   padding: 64px;
 
   background-color: #ff7799;
@@ -644,19 +645,19 @@ textarea.field {
   background-repeat: no-repeat;
   background-size: cover;
 
-  gap: 0 150px;
+  gap: 0 135px;
   grid-template-columns: 1fr 500px;
 }
 
 .delivery-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 371px;
+  width: 407px;
+  padding: 20px 0 0 36px;
 }
 
 .delivery-title {
   margin-bottom: 24px;
+
+  text-align: left;
 }
 
 .delivery-description {
