--- a/styles/styles.css
+++ b/styles/styles.css
@@ -483,10 +483,11 @@ textarea.field {
   border-radius: 50%;
 }
 
-.catalog-img img {
+.catalog-image img {
   display: block;
   width: 100%;
   height: 100%;
+  margin: 0;
 
   border-radius: 50%;
 }
