--- a/styles/styles.css
+++ b/styles/styles.css
@@ -746,6 +746,7 @@ textarea.field {
   background-color: #ff7799;
   background-image: url("../images/backgrounds/contacts-background.png");
   background-repeat: no-repeat;
+  background-position: right;
   background-size: cover;
   border-radius: 16px;
 }
@@ -760,7 +761,7 @@ textarea.field {
 }
 
 .contacts-subtitle {
-  margin: 0;
+  margin: 0 0 12px;
 
   font-weight: 400;
   font-size: 16px;
@@ -769,6 +770,8 @@ textarea.field {
 }
 
 .contacts-address {
+  margin: 0 0 24px;
+
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
@@ -783,7 +786,7 @@ textarea.field {
 }
 
 .contacts-tip {
-  margin: 0;
+  margin: 0 0 33px;
 
   font-weight: 400;
   font-size: 14px;
