--- a/styles/styles.css
+++ b/styles/styles.css
@@ -836,6 +836,8 @@ textarea.field {
 .page-footer-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: start;
 }
 
 .footer-navigation-menu {
