--- a/styles/styles.css
+++ b/styles/styles.css
@@ -345,13 +345,33 @@ textarea.field {
 }
 
 .slide-image {
+  position: relative;
+
   width: 100px;
   height: 150px;
 
   opacity: 0.4;
 }
 
+.slide-image::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+
+  width: 100px;
+  height: 100px;
+
+  background-color: #ffcbd8;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .slide-image img {
+  position: relative;
+  z-index: 2;
+
   display: block;
   width: 100%;
   height: 100%;
@@ -361,6 +381,13 @@ textarea.field {
   width: 367px;
   height: 507px;
   padding: 0 20px;
+
+  opacity: 1;
+}
+
+.slide-active .slide-image::before {
+  width: 327px;
+  height: 312px;
 
   opacity: 1;
 }
