--- a/styles/styles.css
+++ b/styles/styles.css
@@ -300,6 +300,21 @@ textarea.field {
   font-weight: 700;
   color: inherit;
   text-decoration: none;
+
+  transition: transform 0.5s;
+}
+
+.nav-phone:hover {
+  opacity: 0.5;
+}
+
+.nav-phone:focus-visible {
+  outline: none;
+  opacity: 0.5;
+}
+
+.nav-phone:active {
+  transform: scale(0.8);
 }
 
 .nav-user {
@@ -561,10 +576,6 @@ textarea.field {
   cursor: pointer;
 }
 
-.slider-bullet-active {
-  background-color: #fcfcfc;
-}
-
 .slider-bullet:hover {
   border: 1px solid #fcfcfc;
 }
@@ -577,6 +588,10 @@ textarea.field {
 .slider-bullet:active {
   background-color: rgba(252, 252, 252, 0.5);
   border: 1px solid transparent;
+}
+
+.slider-bullet-active {
+  background-color: #fcfcfc;
 }
 
 /* Иконки социальных сетей слайдера */
@@ -752,6 +767,21 @@ textarea.field {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+
+  transition: transform 0.5s;
+}
+
+.catalog-title:hover {
+  opacity: 0.5;
+}
+
+.catalog-title:focus-visible {
+  outline: none;
+  opacity: 0.5;
+}
+
+.catalog-title:active {
+  transform: scale(0.8);
 }
 
 .catalog-text {
@@ -1463,6 +1493,21 @@ textarea.field {
 
   border: 1px solid transparent;
   border-radius: 50%;
+}
+
+.pagination-link:hover {
+  background-color: rgba(252, 252, 252, 0.5);
+}
+
+.pagination-link:focus-visible {
+  background-color: rgba(252, 252, 252, 0.3);
+  border: 1px solid #2d3440;
+  outline: none;
+}
+
+.pagination-link:active {
+  background-color: rgba(252, 252, 252, 0.5);
+  border: 1px solid #fcfcfc;
 }
 
 .pagination-link-current {
